@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2723 2005/02/15 19:06:49 jinmei Exp $
+$KAME: CHANGELOG,v 1.2724 2005/02/22 13:54:27 suz Exp $
 
 <200502>
+2005-02-22  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
+	* kame/sys/netinet6/ip6_input.c: fixed PF malfunction for inbound
+	  IPv6 traffic on freebsd5.
+
 2005-02-15  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
 	* kame/sys/netinet6/ipsec.c: (ipsec[46]_in_reject): fixed
 	unexpected panic on freebsd5.
